--- a/requirements.txt
+++ b/requirements.txt
@@ -5,4 +5,5 @@ PyPDF2==3.0.1
 pandas==2.1.4
 python-docx==1.1.0
 openpyxl==3.1.2
+--extra-index-url https://download.pytorch.org/whl/cpu
 faiss-cpu==1.7.4
