--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,8 @@
-streamlit==1.30.0
-langchain==0.1.14
-langchain_google_genai==0.0.9
-PyPDF2==3.0.1
-pandas==2.1.4
-python-docx==1.1.0
-openpyxl==3.1.2
---extra-index-url https://download.pytorch.org/whl/cpu
-faiss-cpu==1.7.4
+streamlit
+langchain
+langchain_google_genai
+faiss-cpu
+PyPDF2
+pandas
+python-docx
+openpyxl
